update relation-graph
